--- a/src/Backend/AdminBundle/Resources/views/Movimiento/index.html.twig
+++ b/src/Backend/AdminBundle/Resources/views/Movimiento/index.html.twig
@@ -8,7 +8,7 @@
 <div class="row-fluid">
   
   
-  <div class="span2">  {% if is_granted("ROLE_ADDARTICULO") %} <button class="btn btn-primary" type="button" id="new_button" data-url="{{ path('movimiento_new') }}" >Nuevo Movimiento</button> {% endif %} </div>
+  <div class="span2">  {% if is_granted("ROLE_ADDMOV") %} <button class="btn btn-primary" type="button" id="new_button" data-url="{{ path('movimiento_new') }}" >Nuevo Movimiento</button> {% endif %} </div>
   
     <div class="span3">
      
