--- a/src/Backend/AdminBundle/Resources/views/OrdenIngreso/new.html.twig
+++ b/src/Backend/AdminBundle/Resources/views/OrdenIngreso/new.html.twig
@@ -31,7 +31,7 @@
     <!-- Button -->
     <div class="controls">
     <button id="agregar" type="button" class="btn" data-url="{{ path('ordenIngreso_toprocesadoorden') }}">Agregar productos</button>
-    <button type="submit" class="btn btn-primary" id="crear"><i class="icon-ok icon-white"></i>Crear</button>
+    <button type="button" class="btn btn-primary" id="crear"><i class="icon-ok icon-white"></i>Crear</button>
     <button type="button" class="btn btn-inverse" data-url="{{ path('ordenIngreso') }}"><i class="icon-chevron-left icon-white"></i> Back</button>
     
     </div>
