--- a/src/Backend/AdminBundle/Resources/views/OrdenIngresoParte/_ordenIngresoParte.html.twig
+++ b/src/Backend/AdminBundle/Resources/views/OrdenIngresoParte/_ordenIngresoParte.html.twig
@@ -24,6 +24,15 @@
 </div>
 
 <div class="control-group">
+{{ form_label(form.area,"Destino", { 'label_attr': {'class': 'control-label'} }) }}
+<div class="controls">
+ {{ form_widget(form.area, { 'attr': {'class': 'input-xlarge'} }) }}
+ <div id='backend_adminbundle_ordenIngresoParte_area_errorloc' class="help-inline error" >{{ form_errors(form.area) }}</div>
+</div>
+</div>
+
+
+<div class="control-group">
 {{ form_label(form.observaciones,"Observaciones", { 'label_attr': {'class': 'control-label'} }) }}
 <div class="controls">
  {{ form_widget(form.observaciones, { 'attr': {'class': 'input-xlarge'} }) }}
