--- a/src/Backend/AdminBundle/Resources/views/OrdenIngreso/_ordenIngreso.html.twig
+++ b/src/Backend/AdminBundle/Resources/views/OrdenIngreso/_ordenIngreso.html.twig
@@ -16,10 +16,10 @@
 </div>
 
 <div class="control-group">
-{{ form_label(form.area,"Destino", { 'label_attr': {'class': 'control-label'} }) }}
+{{ form_label(form.deposito,"Destino", { 'label_attr': {'class': 'control-label'} }) }}
 <div class="controls">
- {{ form_widget(form.area, { 'attr': {'class': 'input-xlarge'} }) }}
- <div id='backend_adminbundle_ordenIngreso_area_errorloc' class="help-inline error" >{{ form_errors(form.area) }}</div>
+ {{ form_widget(form.deposito, { 'attr': {'class': 'input-xlarge'} }) }}
+ <div id='backend_adminbundle_ordenIngreso_deposito_errorloc' class="help-inline error" >{{ form_errors(form.deposito) }}</div>
 </div>
 </div>
 
