--- a/src/Backend/AdminBundle/Resources/views/Movimiento/new.html.twig
+++ b/src/Backend/AdminBundle/Resources/views/Movimiento/new.html.twig
@@ -20,7 +20,7 @@
     <div class="control-group">
     <!-- Button -->
     <div class="controls">
-    <button id="agregar" type="button" class="btn">Agregar productos</button>
+    <button id="agregar" type="button">Agregar productos</button>
     <button type="button" id="crear" class="btn btn-primary" style="display:none" data-url="{{ path('movimiento_toprocesado') }}"><i class="icon-ok icon-white"></i>Crear</button>
     <button type="button" class="btn btn-inverse" data-url="{{ path('movimiento') }}"><i class="icon-chevron-left icon-white"></i> Back</button>
     
