--- a/src/Backend/AdminBundle/Resources/views/Movimiento/recibo_orden.html.twig
+++ b/src/Backend/AdminBundle/Resources/views/Movimiento/recibo_orden.html.twig
@@ -3,12 +3,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
   <body>
-	  <div><h2>Orden de ingreso de Equipos</h2></div>
+	  <div><h2>Movimiento de Equipos</h2></div>
 	  <div><b>Nro Orden: {{ entity.id }}</b></div>
 	  <div>Fecha de creación: {{ entity.createdAt |date('d-m-Y ') }}</div>
-      <div>Cliente: {{ entity.getCliente.getName }}</div>
-      <div>Documento: {{ entity.getDocumento }}</div>
-      <div>Destino: {{ entity.deposito.getNombre }}</div>
+	  <div>Documento: {{ entity.getDocumento }}</div>
+      <div>Deposito Origen: {{ entity.depositoOrigen.getNombre }}</div>      
+      <div>Destino: {{ entity.depositoDestino.getNombre }}</div>
       <div>
 		   Estado: {{ entity.estado.getName }}
 		  
@@ -19,10 +19,10 @@
 		   {% endif %}		  
 	  </div>
       <div>
-	  <label>Articulos ingresados</label>
+	  <label>Articulos</label>
 	  <br/>
-		{% for i in entity.getIngresos %}
-			{{ i.cantidad }} {{ i.getMarca.getName }} {{ i.getModelo.getName }} 
+		{% for i in entity.getArticulos %}
+			{{ i.getImei }} {{ i.getMarca.getName }} {{ i.getModelo.getName }} {{ i.getModelo.getNameManufacture }}
 		<br/> 
 		{% endfor %}
 	</div>
